@@ -177,6 +177,8 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.6rc1
 
+ - [ZBX-3784] added validation on duplicate discovery rule name (Eduard)
+ - [ZBX-3733] make possible to save Device uniqueness criteria status (discovery rule) in cloning event (Eduard)
  - [ZBX-3845] check, if this user group is used in the config, if so it cannot be deleted (Eduard)
  - [ZBX-3911] fixed wrong trigger expression parsing when key parameters contained "(" (KB)
  - [ZBX-3856] fixed new group creation from template page (Eduard)
